--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -3,6 +3,17 @@
 
 {%- include head.html -%}
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T8C6QMG0PJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-T8C6QMG0PJ');
+</script>
+
 <body>
 
   <style>
