add service status page and move whitepapers to blog

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -70,7 +70,7 @@
     }
   </style>
 
-  {%- include header.html -%}
+  {%- include header_base.html -%}
 
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
